fixed grid columns to be side by side instead of with gaps between

--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
-body {
+
+
+* {
+   max-width: 900px;
    margin: auto;
+}
+
+body {
+   background-image: url("https://cdn.pixabay.com/photo/2020/01/06/10/01/illustration-4745025_960_720.png");
+   background-repeat:no-repeat;
 }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 58px 748px 58px 226px;
-    padding:1px;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 1px 291px;
+    background-color: white;
  }
 
 .box {
@@ -15,4 +23,26 @@ body {
     width: 100px;
  }
 
+ .gameName {
+   text-align: center;
+ }
+
+ .playerOne {
+   text-align: left;
+   margin: 51px 11px 1px 65px;
+ }
+
+ .playerTwo {
+   text-align: right;
+   margin: -29px 15px -25px 9px;
+ }
+
+.drawPlayers {
+   text-align: center;
+}
+
+button {
+   text-align: center;
+   margin: 4px 388px 0px 388px;
+}
  
